# coroserver

./: LICENSE  README.md  meson.build  meson_options.txt  sample_server.cpp
bbfile/: coroserver-examples_git.bb  coroserver_git.bb
examples/: meson.build
examples/body_conversion/: body_conversion.cpp  meson.build
examples/client/: meson.build  sample_client.cpp
examples/data_sync/: data_sync.cpp  file_watcher.hpp  meson.build  synchandler.hpp
examples/dbus_inspector/: dbus_handlers.hpp  dbus_inspector.cpp  dbus_types.hpp  meson.build
examples/dbus_inspector/config/: dbus_inspector.service.in
examples/event_broker/: broker.conf  broker1.conf  broker2.conf  brokerdesk1.conf  brokerdesk2.conf  dbus_sync.hpp  event_broker.cpp  event_file_methods.hpp  file_sync.hpp  meson.build  shared_library.hpp
examples/event_broker/includes/: event_broker_plugin.hpp
examples/event_broker/plugins/: meson.build
examples/event_broker/plugins/hello/: hello_plugin.cpp  meson.build
examples/event_broker/plugins/rsync/: meson.build  rsync_plugin.cpp
examples/event_broker/publisher/: event_publisher.cpp  meson.build
examples/event_broker/service/: event_broker.service
examples/gerrit_scripts/: gerrit.cpp  meson.build
examples/graphql_server/: LIBGRAPHQLPARSER_IMPLEMENTATION.md  README.md  README_LIBGRAPHQLPARSER.md  advanced_queries.json  graphql_handler.hpp  graphql_parser_libgraphql.cpp  graphql_parser_libgraphql.hpp  graphql_server.cpp  graphql_server_libgraphql.cpp  install_libgraphqlparser.sh  meson.build  sample_queries.json  setup.sh  test_queries_libgraphql.json
examples/i2c_service/: README.md  com.ibm.I2CService.service  i2c_service.cpp  meson.build
examples/journalserver/: journal_server.cpp  meson.build
examples/journalserver/service/: journalserver.service
examples/lldp_discoverd/: lldp_discoverd.cpp  meson.build
examples/lldp_discoverd/service/: lldp_discoverd.service
examples/mctp_requester/: mctp_requester.cpp  meson.build
examples/mctp_responder/: mctp_responder.cpp  meson.build
examples/messageque/: meson.build  messageque.cpp
examples/obmc_console/: README.md  console_client.cpp  console_config.hpp  console_dbus.hpp  console_server.cpp  console_server.service  console_server_multi.cpp  meson.build  obmc-console-multi.conf  obmc-console-ssh@2202.service  obmc-console.conf  pty_device.hpp  ssh_pty_device_libssh2.hpp  sshd.2202.conf
examples/redfish_client/: meson.build  redfish_client.cpp
examples/redfish_listener/: event_listener.hpp  meson.build  redfishlistener.cpp
examples/redfishproxy/: README.md  meson.build  redfish_proxy.cpp
examples/redfishproxy/service/: redfishproxy.service
examples/server/: meson.build  sample_server.cpp  server-cert.pem  server-key.pem
examples/spdm/: CERTIFICATE_EXCHANGE_README.md  IMPLEMENTATION_SUMMARY.md  README.md  SPDM_DESIGN_DIAGRAMS.md  meson.build
examples/spdm/bbfiles/: libspdm_git.bb
examples/spdm/certs/: ca.der  ca_key.der  server_cert.der  server_key.der
examples/spdm/include/: cert_generator.hpp  lldp_neighbour_handlers.hpp  socket_functions.hpp  spdm_custom_messages.hpp  spdm_init.hpp  spdm_io_redirect.hpp  spdm_utils.hpp  spdmglobal.hpp
examples/spdm/includes/: socket_functions.hpp  spdm_init.hpp  spdmglobal.hpp
examples/spdm/spdm_requester/: meson.build  requester_init.hpp  spdm_requester.cpp  spdm_requester.hpp  spdm_tcp_client.hpp
examples/spdm/spdm_requester/service/: xyz.openbmc_project.spdm.requester.conf  xyz.openbmc_project.spdm.requester.service.in
examples/spdm/spdm_requester/src/: boostasync_server.hpp  cert_exchange_requester.hpp  component_integrity.hpp  requester_init.hpp  spdm_certificate_client.hpp  spdm_connection.hpp  spdm_measurement_client.hpp  spdm_requester.cpp  spdm_requester.hpp  spdm_tcp_client.hpp
examples/spdm/spdm_responder/: meson.build  responder_init.hpp  spdm_responder.cpp  spdm_responder.hpp  spdm_tcp_server.hpp
examples/spdm/spdm_responder/service/: ._xyz.openbmc_project.spdm.responder.service.in  xyz.openbmc_project.spdm.responder.conf  xyz.openbmc_project.spdm.responder.service.in
examples/spdm/spdm_responder/src/: cert_exchange_handler.hpp  custom_message_dispatcher.hpp  custom_message_handlers.hpp  responder_init.hpp  responder_object.hpp  spdm_measurement_utils.hpp  spdm_protocol_handler.hpp  spdm_responder.cpp  spdm_responder.hpp  spdm_socket_handler.hpp  spdm_tcp_server.hpp
examples/spdmlite/: cert_generator.hpp  certificate_exchange.hpp  conf1.conf  conf2.conf  globaldefs.hpp  measurements.hpp  meson.build  pic_controller.hpp  public.pem  spdm.conf  spdm_handshake.hpp  spdmlite.cpp  spdmstart.json
examples/spdmlite/certapp/: certapp.cpp  meson.build
examples/spdmlite/certs/: pkey.pem  public.pem
examples/spdmlite/include/: globaldefs.hpp
examples/spdmlite/service/: xyz.openbmc_project.spdmlite.conf
examples/spdmlite/src/: certificate_exchange.hpp  spdmdeviceiface.hpp  spdmlite.cpp
examples/stdexec_client/: README.md  meson.build  webclient_stdexec_example.cpp
examples/tcp_client/: meson.build  stacktrace.hpp  tcp_client.cpp
examples/tcp_server/: meson.build  tcp_server.cpp
examples/test/: meson.build  test.cpp  test1.cpp
examples/uart_server/: README.md  meson.build  uart_server.cpp
examples/unix_client/: meson.build  unix_client.cpp
examples/web_client/: meson.build  web_client.cpp
examples/web_crawler/: meson.build  web_crawler.cpp
examples/when_all/: meson.build  when_all.cpp
examples/when_any/: meson.build  when_any_example.cpp
examples/workers/: meson.build  workers.cpp
include/: archive.hpp  async_wait.hpp  beastdefs.hpp  cert_generator.hpp  command_line_parser.hpp  completion_handler.hpp  console_dbus.hpp  eventmethods.hpp  eventqueue.hpp  file_descriptor.hpp  file_io.hpp  file_watcher.hpp  flat_map.hpp  http_client.hpp  http_errors.hpp  http_server.hpp  http_target_parser.hpp  i2c_client.hpp  logger.hpp  make_awaitable.hpp  mctp_requester.hpp  mctp_responder.hpp  messageque.hpp  packet_stream.hpp  pam_functions.hpp  pty_device.hpp  redfish_client.hpp  request_mapper.hpp  serializer.hpp  (+15 more)
(+4 files in other folders)
